# Babieca

./: CMakeLists.txt  README.md
Book/: CMakeLists.txt  main.cpp
BookManager/: CMakeLists.txt  main.cpp
Common/: Book.cpp  Book.h  CMakeLists.txt  Common.cpp  Common.h  Exchange.cpp  Exchange.h  Market.cpp  Market.h
Doc/: HLD.drawio
Kdb/: CMakeLists.txt  k.h  kdb.h  kdb_connector.cpp  kdb_connector.h  kdb_result.cpp  kdb_result.h  kdb_table.cpp  kdb_table.h  kdb_type.h  kdb_vector.h
OrderManagement/: CMakeLists.txt  main.cpp
